--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@google-cloud/speech": "^3.3.1",
+    "@google-cloud/text-to-speech": "^1.4.0",
     "axios": "^0.19.0",
     "busboy": "^0.3.1",
     "firebase-admin": "^8.0.0",
