--- a/package.json
+++ b/package.json
@@ -21,18 +21,22 @@
     "expo-av": "^7.0.1",
     "expo-constants": "^7.0.0",
     "expo-font": "^7.0.0",
+    "expo-speech": "^7.0.0",
     "expo-web-browser": "^7.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
-    "react-native-fs": "^2.14.1",
+    "react-native-dotenv": "^0.2.0",
+    "react-native-fs": "^2.15.2",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-paper": "^2.16.0",
     "react-native-web": "^0.11.7",
-    "react-navigation": "^3.12.0"
+    "react-navigation": "^3.12.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0",
+    "eslint-plugin-promise": "^4.2.1",
     "jest-expo": "^35.0.0"
   },
   "private": true
