--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@expo/samples": "~3.0.3",
     "@expo/vector-icons": "^10.0.3",
     "@react-navigation/web": "^1.0.0-alpha.9",
+    "axios": "^0.19.0",
     "buffer": "^5.4.3",
     "expo": "^35.0.0",
     "expo-asset": "^7.0.0",
@@ -26,7 +27,6 @@
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
-    "react-native-dotenv": "^0.2.0",
     "react-native-fs": "^2.15.2",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-paper": "^2.16.0",
